src/main/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    name: hello
  ports:
    - port: 8080
      targetPort: 8080
