src/main/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
spec:
  rules:
    - host: hello.192.168.64.35.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc
                port:
                  number: 8080
